--- a/styles.css
+++ b/styles.css
@@ -140,3 +140,23 @@ ul li {
     transform: scale(1.5);
     transition: transform 0.3s ease-in-out;
 }
+
+.legend {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    align-items: center;
+    margin-bottom: 1em;
+}
+
+.legend-item {
+    display: flex;
+    align-items: center;
+    margin: 0.5em;
+}
+
+.color-box {
+    width: 20px;
+    height: 20px;
+    margin-right: 5px;
+}
